--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "gulp-sourcemaps": "^3.0.0",
     "jsrsasign": "^10.3.0",
     "path": "^0.12.7",
@@ -23,7 +24,6 @@
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^15.12.2",
     "browserify": "^17.0.0",
-    "gulp": "^4.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "tsify": "^5.0.4",
     "typescript": "^4.3.5",
