--- a/.github/workflows/master_playlist-converter.yml
+++ b/.github/workflows/master_playlist-converter.yml
@@ -20,12 +20,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm install --prefix ./frontend
+          gulp -f frontend/gulpfile.js
+          node server/out/app.js 
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
