--- a/.github/workflows/master_playlist-converter.yml
+++ b/.github/workflows/master_playlist-converter.yml
@@ -23,6 +23,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install --prefix ./frontend
+          npm install --prefix ./server
           gulp -f frontend/gulpfile.js
           node server/out/app.js 
 
