--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "ES2015",
         "module": "commonjs",
         "strict": true,
-        "esModuleInterop": true,
+        "esModuleInterop": false,
+        "allowSyntheticDefaultImports": false,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "strictNullChecks": false,
