--- a/.github/workflows/master_playlist-converter.yml
+++ b/.github/workflows/master_playlist-converter.yml
@@ -22,6 +22,7 @@ jobs:
           node-version: '14.x'
       - name: npm install, build, and test
         run: |
+          npm install
           npm install --prefix ./frontend
           npm install --prefix ./server
           gulp -f frontend/gulpfile.js
