--- a/.github/workflows/master_playlist-converter.yml
+++ b/.github/workflows/master_playlist-converter.yml
@@ -7,8 +7,8 @@ on:
   #push:
   #  branches:
   #    - master
-  workflow_dispatch:
-
+  # workflow_dispatch:
+  workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
