--- a/.github/workflows/master_playlist-converter.yml
+++ b/.github/workflows/master_playlist-converter.yml
@@ -4,11 +4,11 @@
 name: Build and deploy Node.js app to Azure Web App - playlist-converter
 
 on:
-  #push:
-  #  branches:
-  #    - master
-  # workflow_dispatch:
-  workflow_dispatch
+  push:
+   branches:
+     - master
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
