--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,7 +16,8 @@
     "display": "Recommended",
     "include": [
         "src/**/*.ts",
-        "src/*.ts"
+        "src/*.ts",
+        "__tests__/*.ts"
     ],
     "exclude": [
         "node_modules"
