--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,9 @@
     "name": "playlist-converter",
     "version": "0.0.1",
     "private": true,
-    "scripts": {},
+    "scripts": {
+        "test": "jest"
+    },
     "dependencies": {
         "@types/apple-music-api": "^0.4.1",
         "@types/spotify-api": "0.0.11",
@@ -25,14 +27,18 @@
         "@types/cors": "^2.8.12",
         "@types/debug": "^4.1.7",
         "@types/express": "^4.17.13",
-        "@types/node": "^15.12.2",
+        "@types/jest": "^29.5.1",
+        "@types/node": "^20.2.0",
         "browserify": "^17.0.0",
         "gulp": "^4.0.0",
         "gulp-typescript": "^6.0.0-alpha.1",
+        "jest": "^29.5.0",
         "source-map-support": "^0.5.20",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.0",
         "tsify": "^5.0.4",
         "tslint": "^6.1.3",
-        "typescript": "^4.4.3",
+        "typescript": "^4.9.5",
         "vinyl-source-stream": "^2.0.0"
     }
 }
