--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,7 +11,8 @@
         "noImplicitAny": false,
         "moduleResolution": "node",
         "sourceMap": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "types": ["node"]
     },
     "$schema": "https://json.schemastore.org/tsconfig",
     "display": "Recommended",
